--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
-    "node-persist": "0.0.11"
+    "node-persist": "0.0.11",
+    "text-table": "^0.2.0"
   }
 }
