--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "node-persist": "0.0.11",
+    "ssh-config-parser": "0.0.0",
     "text-table": "^0.2.0"
   }
 }
