--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "3.0.0",
   "description": "warp directory - node edition",
   "main": "index.js",
+  "bugs": {
+    "url": "https://github.com/greg-js/wdn/issues",
+    "email": "gregory.scheerlinck@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/greg-js/wdn.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint index.js */*.js"
