--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "extends": "eslint:recommended",
     "rules": {
         "comma-dangle": 0,
-        "no-console": 0
+        "no-console": 0,
+        "max-len": [ "error", 100 ]
     },
     "env": {
         "node": true
