--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/greg-js/wdn.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/mocha/bin/mocha",
     "lint": "eslint index.js */*.js"
   },
   "keywords": [
@@ -34,5 +34,9 @@
     "node-persist": "0.0.11",
     "ssh-config-parser": "0.0.0",
     "text-table": "^0.2.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3"
   }
 }
