--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "node-persist": "0.0.11",
-    "ssh-config-parser": "0.0.0",
+    "ssh-config-parser": "git://github.com/greg-js/node-ssh-config-parser.git",
     "text-table": "^0.2.0"
   },
   "devDependencies": {
