--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": ">=0.12"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "node-persist": "0.0.11",
@@ -38,6 +39,7 @@
     "text-table": "^0.2.0"
   },
   "devDependencies": {
+    "bdd-stdin": "^0.2.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.4",
