--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "wdn",
-  "version": "3.2.1",
+  "version": "3.3.0",
   "description": "NodeJS-powered directory warping",
   "main": "index.js",
+  "bin": {
+    "wdn": "./bin/cli.js"
+  },
   "bugs": {
     "url": "https://github.com/greg-js/wdn/issues",
     "email": "gregory.scheerlinck@gmail.com"
@@ -34,6 +37,7 @@
     "bluebird": "^3.4.1",
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
+    "omelette": "^0.3.1",
     "node-persist": "0.0.11",
     "ssh-config-parser": "git://github.com/greg-js/node-ssh-config-parser.git",
     "text-table": "^0.2.0"
