--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "url": "https://github.com/greg-js/wdn.git"
   },
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha",
-    "coverage": "node_modules/.bin/istanbul cover _mocha -- -R spec",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "lint": "eslint index.js */*.js"
+    "test": "node node_modules/.bin/mocha",
+    "coverage": "node node_modules/.bin/istanbul cover _mocha -- -R spec",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "lint": "node node_modules/.bin/eslint index.js */*.js"
   },
   "keywords": [
     "wd",
@@ -46,6 +46,7 @@
     "bdd-stdin": "^0.2.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.9",
+    "eslint": "^3.1.1",
     "istanbul": "^0.4.4",
     "mocha": "^2.5.3"
   }
