--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "bluebird": "^3.4.1",
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
-    "omelette": "^0.3.1",
+    "omelette": "git://github.com/greg-js/omelette.git",
     "node-persist": "0.0.11",
     "ssh-config-parser": "git://github.com/greg-js/node-ssh-config-parser.git",
     "text-table": "^0.2.0"
